refactor: List.of()로 리스트를 생성하도록 변경